--- a/styles.css
+++ b/styles.css
@@ -28,12 +28,16 @@
 .header button {
     margin:0;
     background-color: #fed497;
-    padding: 20px 25px;
+    padding: 10px 10px;
     border-radius: 10px;
     border:none;
     font-size: x-large;
     font-family: Rubik;
     font-weight: 500;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+
 
 
 }
